playing around with Reflector API and metadata

--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "reflect-metadata": "^0.1.10",
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.2",
     "webpack": "^3.6.0"
+  },
+  "devDependencies": {
+    "@types/reflect-metadata": "0.0.5"
   }
 }
